--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,169 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+/** Light */
+@font-face {
+  font-family: "AppleSdGothicNeo";
+  font-weight: 300;
+  src: url("/fonts/AppleSDGothicNeoL.ttf");
 }
 
+/** Medium */
+@font-face {
+  font-family: "AppleSdGothicNeo";
+  font-weight: 500;
+  src: url("/fonts/AppleSDGothicNeoM.ttf");
+}
+
+/** Bold */
+@font-face {
+  font-family: "AppleSdGothicNeo";
+  font-weight: 700;
+  src: url("/fonts/AppleSDGothicNeoB.ttf");
+}
+
+/** Extra Bold */
+@font-face {
+  font-family: "AppleSdGothicNeo";
+  font-weight: 800;
+  src: url("/fonts/AppleSDGothicNeoEB.ttf");
+}
+
+/** Heavy */
+@font-face {
+  font-family: "AppleSdGothicNeo";
+  font-weight: 900;
+  src: url("/fonts/AppleSDGothicNeoH.ttf");
+}
+
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  word-break: keep-all;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  font-weight: 400;
+  line-height: 1.3;
+}
+ol,
+ul {
+  list-style: none;
+}
 a {
-  color: inherit;
   text-decoration: none;
 }
-
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
 * {
-  box-sizing: border-box;
+  font-family: "AppleSdGothicNeo", sans-serif;
 }
